force-app/main/default/objects/Account/fields/Meap_Flag__c.field-meta.xml
<CustomField>
    <fullName>Meap_Flag__c</fullName>
    <label>Meap Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>