force-app/main/default/objects/Account/fields/Meter_No__c.field-meta.xml
<CustomField>
    <fullName>Meter_No__c</fullName>
    <label>Meter No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>