force-app/main/default/objects/Account/fields/Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Initial__c</fullName>
    <description>so created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>so created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>