force-app/main/default/objects/Account/fields/Midstream_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Midstream_Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Midstream Channel Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>