force-app/main/default/objects/Account/fields/Midstream_Channel_Status__c.field-meta.xml
<CustomField>
    <fullName>Midstream_Channel_Status__c</fullName>
    <label>Midstream Channel Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Registration Email Sent</fullName>
            </value>
            <value>
                <fullName>Registration Forms Received</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>More Information Required</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Customer Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>