force-app/main/default/objects/Account/fields/MidStream_Participation_States__c.field-meta.xml
<CustomField>
    <fullName>MidStream_Participation_States__c</fullName>
    <label>MidStream Participation States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KY</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>