force-app/main/default/objects/Account/fields/Midstream_Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Midstream_Sales_Stage__c</fullName>
    <description>Created as per case 00050211</description>
    <label>Midstream Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>