force-app/main/default/objects/Account/fields/Midstream_Technology_Interests__c.field-meta.xml
<CustomField>
    <fullName>Midstream_Technology_Interests__c</fullName>
    <label>Midstream Technology Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>