force-app/main/default/objects/Account/fields/Multifamily_Flag__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_Flag__c</fullName>
    <label>MFFlag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>