force-app/main/default/objects/Account/fields/Normalized_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Barcode__c</fullName>
    <label>Normalized Barcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>