force-app/main/default/objects/Account/fields/Normalized_City__c.field-meta.xml
<CustomField>
    <fullName>Normalized_City__c</fullName>
    <label>Normalized City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>