force-app/main/default/objects/Account/fields/Normalized_Plus4__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Plus4__c</fullName>
    <label>Normalized Plus4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>