force-app/main/default/objects/Account/fields/Normalized_Postdirection__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Postdirection__c</fullName>
    <label>Normalized Postdirection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>