force-app/main/default/objects/Account/fields/Normalized_Predirection__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Predirection__c</fullName>
    <label>Normalized Predirection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>