force-app/main/default/objects/Account/fields/Normalized_State__c.field-meta.xml
<CustomField>
    <fullName>Normalized_State__c</fullName>
    <label>Normalized State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>