force-app/main/default/objects/Account/fields/Normalized_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Street_Type__c</fullName>
    <label>Normalized Street Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>