force-app/main/default/objects/Account/fields/Normalized_Unitabbr__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Unitabbr__c</fullName>
    <label>Normalized Unitabbr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>