force-app/main/default/objects/Account/fields/Normalized_Unitid__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Unitid__c</fullName>
    <label>Normalized Unitid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>