force-app/main/default/objects/Account/fields/Normalized_Zip__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Zip__c</fullName>
    <label>Normalized Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>