force-app/main/default/objects/Account/fields/Offline_Flag__c.field-meta.xml
<CustomField>
    <fullName>Offline_Flag__c</fullName>
    <label>Offline Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>