force-app/main/default/objects/Account/fields/Ok_To_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Ok_To_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ok To Solicit</label>
    <type>Checkbox</type>
</CustomField>