force-app/main/default/objects/Account/fields/OPCO__c.field-meta.xml
<CustomField>
    <fullName>OPCO__c</fullName>
    <description>Modified by TJ, related to ITG 445056. Added new picklist values.</description>
    <inlineHelpText>Operating Company</inlineHelpText>
    <label>OPCO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEC(NC)</fullName>
            </value>
            <value>
                <fullName>DEC(SC)</fullName>
            </value>
            <value>
                <fullName>DEP(NC)</fullName>
            </value>
            <value>
                <fullName>DEP(SC)</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
            <value>
                <fullName>DEI</fullName>
            </value>
            <value>
                <fullName>DEK</fullName>
            </value>
            <value>
                <fullName>DEO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>