force-app/main/default/objects/Account/fields/Operational_Email__c.field-meta.xml
<CustomField>
    <fullName>Operational_Email__c</fullName>
    <label>Operational Email</label>
    <type>Email</type>
</CustomField>