force-app/main/default/objects/Account/fields/Operational_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Operational_First_Name__c</fullName>
    <label>Operational First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>