force-app/main/default/objects/Account/fields/Operational_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Operational_Last_Name__c</fullName>
    <label>Operational Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>