force-app/main/default/objects/Account/fields/Operational_Phone__c.field-meta.xml
<CustomField>
    <fullName>Operational_Phone__c</fullName>
    <label>Operational Phone</label>
    <type>Phone</type>
</CustomField>