force-app/main/default/objects/Account/fields/OTH_ACCTNUM__c.field-meta.xml
<CustomField>
    <fullName>OTH_ACCTNUM__c</fullName>
    <label>OTH_ACCTNUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>