force-app/main/default/objects/Account/fields/OTH_PROVIDERCODE__c.field-meta.xml
<CustomField>
    <fullName>OTH_PROVIDERCODE__c</fullName>
    <label>OTH PROVIDERCODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eversource</fullName>
            </value>
            <value>
                <fullName>National Grid</fullName>
            </value>
            <value>
                <fullName>Eversource West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>