force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 15 days</fullName>
            </value>
            <value>
                <fullName>Net 30 days</fullName>
            </value>
            <value>
                <fullName>Net 45 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>