force-app/main/default/objects/Account/fields/Premise_ID__c.field-meta.xml
<CustomField>
    <fullName>Premise_ID__c</fullName>
    <description>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>Exists in APCO org so created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Premise ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>