force-app/main/default/objects/Account/fields/PREMISE_NEW_CONSTRUCTION_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PREMISE_NEW_CONSTRUCTION_FLAG__c</fullName>
    <label>PREMISE NEW CONSTRUCTION FLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>