force-app/main/default/objects/Account/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2007 QUALIFYING PROJECT</fullName>
            </value>
            <value>
                <fullName>ACCOUNT MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>Account Plan</fullName>
            </value>
            <value>
                <fullName>Billing Convenience Services</fullName>
            </value>
            <value>
                <fullName>BILL PAY OPTIONS</fullName>
            </value>
            <value>
                <fullName>Bulk Power Emergency</fullName>
            </value>
            <value>
                <fullName>Business News Line</fullName>
            </value>
            <value>
                <fullName>CALL IN PROBLEMS</fullName>
            </value>
            <value>
                <fullName>Ebilling</fullName>
            </value>
            <value>
                <fullName>Eclips</fullName>
            </value>
            <value>
                <fullName>Electronic Payment Option</fullName>
            </value>
            <value>
                <fullName>ENERGY MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>Energy Profiler Online</fullName>
            </value>
            <value>
                <fullName>EnFocus</fullName>
            </value>
            <value>
                <fullName>Excess Facilities</fullName>
            </value>
            <value>
                <fullName>FUTURE PROJECT DOLLARS</fullName>
            </value>
            <value>
                <fullName>Gas Curtailment</fullName>
            </value>
            <value>
                <fullName>Interruptible Service, IS</fullName>
            </value>
            <value>
                <fullName>MANAGE FACILITIES</fullName>
            </value>
            <value>
                <fullName>MyDuke</fullName>
            </value>
            <value>
                <fullName>Non-Residential Energy/Assessment</fullName>
            </value>
            <value>
                <fullName>Ohio Choice- Electric</fullName>
            </value>
            <value>
                <fullName>Ohio Choice- Gas</fullName>
            </value>
            <value>
                <fullName>OUTAGE MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>Outage Management Services</fullName>
            </value>
            <value>
                <fullName>OUTDOOR LIGHTING</fullName>
            </value>
            <value>
                <fullName>PAY BILL</fullName>
            </value>
            <value>
                <fullName>PLANNED PROJECT</fullName>
            </value>
            <value>
                <fullName>Power Quality Services</fullName>
            </value>
            <value>
                <fullName>PowerShare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>