force-app/main/default/objects/Account/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CenterPoint Energy</fullName>
            </value>
            <value>
                <fullName>PPL Electric Utilities</fullName>
            </value>
            <value>
                <fullName>ETO</fullName>
            </value>
            <value>
                <fullName>Comed</fullName>
            </value>
            <value>
                <fullName>BGE</fullName>
                <default>true</default>
                <label>BGE</label>
            </value>
            <value>
                <fullName>Energy Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>