force-app/main/default/objects/Account/fields/QCN_Status__c.field-meta.xml
<CustomField>
    <fullName>QCN_Status__c</fullName>
    <label>QCN Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>