force-app/main/default/objects/Account/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <label>Rate Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OH IT</fullName>
            </value>
            <value>
                <fullName>KY IT</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>