force-app/main/default/objects/Account/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <label>Rate Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>