force-app/main/default/objects/Account/fields/REFERREDBY__c.field-meta.xml
<CustomField>
    <fullName>REFERREDBY__c</fullName>
    <label>REFERREDBY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>