force-app/main/default/objects/Account/fields/Registration_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Renewal_Date__c</fullName>
    <label>Registration Renewal Date</label>
    <type>Date</type>
</CustomField>