force-app/main/default/objects/Account/fields/Rolling_12_Month_Total_Usage_kWh__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Month_Total_Usage_kWh__c</fullName>
    <description>Added NINT964 BE 05/2014 SERG On standard layout</description>
    <inlineHelpText>Total account usage the customer has been billed (i.e., May to May kWh)</inlineHelpText>
    <label>Rolling 12 Month Total Usage kWh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>