force-app/main/default/objects/Account/fields/Sample_Duke_Location__c.field-meta.xml
<CustomField>
    <fullName>Sample_Duke_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Duke Location</label>
    <type>Checkbox</type>
</CustomField>