force-app/main/default/objects/Account/fields/Segment_Manager__c.field-meta.xml
<CustomField>
    <fullName>Segment_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added NINT964 BE 05/2014 SERG on standard layout</description>
    <inlineHelpText>Segment Manager assigned to the Account based on Business Type</inlineHelpText>
    <label>Segment Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>