force-app/main/default/objects/Account/fields/Service_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Number__c</fullName>
    <label>Service Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>