force-app/main/default/objects/Account/fields/Service_Address_Cardinal_Direction__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Cardinal_Direction__c</fullName>
    <description>created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Service Address - Cardinal Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>