force-app/main/default/objects/Account/fields/Service_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Full__c</fullName>
    <formula>Service_Street_Number__c + &apos; &apos;+ Service_Street__c + &apos; &apos; + Service_Street_Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Service Address</label>
    <type>Text</type>
</CustomField>