force-app/main/default/objects/Account/fields/Service_Address_Structure__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Structure__c</fullName>
    <description>created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Service Address Structure</label>
    <length>25</length>
    <type>Text</type>
</CustomField>