force-app/main/default/objects/Account/fields/Service_Agreement_Rate_Schedule_Cd__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Rate_Schedule_Cd__c</fullName>
    <label>Service Agreement Rate Schedule Cd</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>