force-app/main/default/objects/Account/fields/Service_Agreement_Rate_Schedule_Code_ch__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Rate_Schedule_Code_ch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will checked if Service Agreement Rate Schedule Code  is exist . This field is used in dsmtCustomerEligibilitySearchController</description>
    <label>Service Agreement Rate Schedule Code ch</label>
    <type>Checkbox</type>
</CustomField>