force-app/main/default/objects/Account/fields/Service_City__c.field-meta.xml
<CustomField>
    <fullName>Service_City__c</fullName>
    <label>Service City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>