force-app/main/default/objects/Account/fields/Service_County__c.field-meta.xml
<CustomField>
    <fullName>Service_County__c</fullName>
    <label>Service County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abbeville</fullName>
            </value>
            <value>
                <fullName>Adair</fullName>
            </value>
            <value>
                <fullName>Adams</fullName>
            </value>
            <value>
                <fullName>Aiken</fullName>
            </value>
            <value>
                <fullName>Alachua</fullName>
            </value>
            <value>
                <fullName>Alamance</fullName>
            </value>
            <value>
                <fullName>Alexander</fullName>
            </value>
            <value>
                <fullName>Alleghany</fullName>
            </value>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Allendale</fullName>
            </value>
            <value>
                <fullName>Anderson</fullName>
            </value>
            <value>
                <fullName>Anson</fullName>
            </value>
            <value>
                <fullName>Ashe</fullName>
            </value>
            <value>
                <fullName>Ashland</fullName>
            </value>
            <value>
                <fullName>Ashtabula</fullName>
            </value>
            <value>
                <fullName>Athens</fullName>
            </value>
            <value>
                <fullName>Auglaize</fullName>
            </value>
            <value>
                <fullName>Avery</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Ballard</fullName>
            </value>
            <value>
                <fullName>Bamberg</fullName>
            </value>
            <value>
                <fullName>Barnwell</fullName>
            </value>
            <value>
                <fullName>Barren</fullName>
            </value>
            <value>
                <fullName>Bartholomew</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Bay</fullName>
            </value>
            <value>
                <fullName>Beaufort</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Belmont</fullName>
            </value>
            <value>
                <fullName>Benton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>