force-app/main/default/objects/Account/fields/SERVICE_POINT_NO__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_POINT_NO__c</fullName>
    <label>SERVICE POINT NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>