force-app/main/default/objects/Account/fields/Service_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Postal_Code__c</fullName>
    <label>Service Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>