force-app/main/default/objects/Account/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <label>Service State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>