force-app/main/default/objects/Account/fields/Service_State_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_State_Text__c</fullName>
    <label>Service State Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>