force-app/main/default/objects/Account/fields/Service_Street_Misc__c.field-meta.xml
<CustomField>
    <fullName>Service_Street_Misc__c</fullName>
    <label>Service Street Misc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>