force-app/main/default/objects/Account/fields/Service_Street_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Service_Street_Suffix__c</fullName>
    <label>Service Street Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>