force-app/main/default/objects/Account/fields/Service_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Termination_Date__c</fullName>
    <description>created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Service Termination Date</label>
    <type>Date</type>
</CustomField>