force-app/main/default/objects/Account/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <label>Service Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>