force-app/main/default/objects/Account/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <description>Site ID is the unique identifier for accounts with multiple &quot;hierarchy&quot; levels</description>
    <inlineHelpText>Premise number</inlineHelpText>
    <label>Site ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>