force-app/main/default/objects/Account/fields/Site_Self_Registration_Account__c.field-meta.xml
<CustomField>
    <fullName>Site_Self_Registration_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this check box for all site self registration accounts</inlineHelpText>
    <label>Site Self Registration Account</label>
    <type>Checkbox</type>
</CustomField>