force-app/main/default/objects/Account/fields/Source_Customer_System_Cd__c.field-meta.xml
<CustomField>
    <fullName>Source_Customer_System_Cd__c</fullName>
    <description>Added NINT964 BE 05/2014 SERG on standard layout</description>
    <label>Source Customer System Cd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBIS</fullName>
            </value>
            <value>
                <fullName>CIM</fullName>
            </value>
            <value>
                <fullName>CMSE</fullName>
            </value>
            <value>
                <fullName>CMSW</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>