force-app/main/default/objects/Account/fields/Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Effective_Date__c</fullName>
    <description>created as part of Data Migration Activity @ CLR2980</description>
    <inlineHelpText>created as part of Data Migration Activity @ CLR2980</inlineHelpText>
    <label>Status Effective Date</label>
    <type>Date</type>
</CustomField>