force-app/main/default/objects/Account/fields/Sync_Turned_On_In_Master_Org__c.field-meta.xml
<CustomField>
    <fullName>Sync_Turned_On_In_Master_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Turned On In Master Org</label>
    <type>Checkbox</type>
</CustomField>